# DeepRL-for-Financial-Stock-Trading

./: README.md  backtest_stock  dqn_reward  pyproject.toml  run.sh  run_process.sh  stock_ddpg_main.py  stock_dqn_main.py  test.py  vsc_stimu3_brnn.pbs
env/: StockEnv.py  StockEnv_MACD.py  StockEnv_v2.py
model/: model_summary.py
result_draw/: ddpg_reward_list  ddqn_profit  ddqn_reward_list  dqn_reward_list  macd_profit  picklefile_draw_helper.py  stock__stock  wddpg1_profit  wddpg_lstm_reward_list  wddpg_reward_list  wdqn_profit
src/: data_fetch.py  stock_macd_main.py  stock_test.py
src/data/: config.py  data_processor.py
src/data/data_processors/: processor_yahoofinance.py
src/model/: network.py  network_DDPG.py  network_test.py
src/result_draw/: ddpg1_profit  ddpg_lstm_reward_list  ddpg_profit  dqn_profit  wddpg_profit  wddqn_profit  wddqn_reward_list  wdqn_reward_list
tests/: __init__.py
